static/style.css
@font-face {
    font-family: "montserrat";
    font-weight: bold;
    src: url(../static/fonts/Montserrat-Regular.ttf)
}

@font-face {
    font-family: "montserrat-bold";
    src: url(../static/fonts/Montserrat-Bold.ttf)
}

body {
    font-family: "montserrat";
}

.font-bold {
    font-family: "montserrat-bold";
}

.form-input {
    width: 100%;
    height: 2.3rem;
    border-radius: 0.5rem;
    padding: 0.3rem 0.5rem;
}

.form-error {
    color: red;
    font-size: 0.8rem;
}

.list-table tr td {
    width: 50px;
    text-align: center;
}

/* Dropdown Menu */
.dropbtn {
    background-color: #04AA6D;
    color: white;
    padding: 16px;
    font-size: 16px;
    border: none;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
    background-color: #ddd;
}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
    display: block;
}

/* Change the background color of the dropdown button when the dropdown content is shown */
.dropdown:hover .dropbtn {
    background-color: #3e8e41;
}

/* File input */
.custom-file-input::-webkit-file-upload-button {
    visibility: hidden;
}

.custom-file-input::before {
    content: 'Select image';
    height: 2rem;
    display: inline-block;
    background: linear-gradient(top, #f9f9f9, #e3e3e3);
    border: 1px solid #000;
    border-radius: 5px;
    padding: 6px 12px;
    outline: none;
    white-space: nowrap;
    -webkit-user-select: none;
    cursor: pointer;
    text-shadow: 1px 1px #fff;
    font-weight: 700;
    font-size: 0.8rem;
}

.custom-file-input:hover::before {
    border-color: black;
}

.custom-file-input:active::before {
    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
}

